--- a/css/main.css
+++ b/css/main.css
@@ -945,7 +945,7 @@ footer {
 
 .team-member {
     display: inline-block;
-    width: 400px;
+    min-width: 400px;
     background: rgba(0, 0, 0, 0.6);
     border: 1px solid rgba(255, 215, 0, 0.2);
     border-radius: 1rem;
